flapivor/tests/m1/hopix/parser/bad/35-type-definition-sum-5.hopix
type Triple<a b c> = Triple(a, b, c)